add subscription block

--- a/src/index.html
+++ b/src/index.html
@@ -225,6 +225,35 @@
           </div>
         </div>
       </section>
+
+      <section
+      id="subscription"
+      class="subscription"
+    >
+        <div class="container">
+          <div class="section__content subscription__content">
+            <h2 class=" section-title subscription__title">
+              Підписка
+            </h2>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form
+                id="form"
+                action="#"
+                class="subscription__form"
+                onsubmit="this.reset(); window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"
+              >
+              <input
+                type="email"
+                placeholder="E-mail"
+                class="subscription__input"
+                required
+              />
+              <button class="button subscription__button"></button>
+            </form>
+
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
