add desktop gallery

--- a/src/index.html
+++ b/src/index.html
@@ -227,6 +227,32 @@
       </section>
 
       <section
+        id="gallery"
+        class="gallery"
+      >
+        <div class="container">
+          <div class="section__content gallery__content">
+            <h2 class="gallery__title section-title section-title--small">
+              Галерея
+            </h2>
+            <div class="gallery__images">
+              <img src="./images/gallery/gal1.jpeg"
+              class="gallery__image gallery__image--1" alt="image1">
+              <img src="./images/gallery/gal2.jpeg"
+              class="gallery__image gallery__image--2" alt="image2">
+              <img src="./images/gallery/gal3.jpeg"
+              class="gallery__image gallery__image--3" alt="image3">
+              <img src="./images/gallery/gal4.jpeg"
+              class="gallery__image gallery__image--4" alt="image4">
+
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
+      <section
       id="subscription"
       class="subscription"
     >
