--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,151 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Title</title>
-    <link
-      rel="stylesheet"
-      href="./styles/main.scss"
-    />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="/src/images/museum.png" type="image-icon">
+  <title>Museum</title>
+  <link rel="stylesheet" href="./styles/main.scss" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500&family=Montserrat:wght@100..900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__content">
+
+      <div class="header__bottom">
+        <div class="container">
+          <div class="header__bottom-content">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <button class="header__button">
+              КВИТКИ
+            </button>
+            <div class="header__info">
+              <div class="header__info-desc">події</div>
+              <div class="header__info-line"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="header__wrapper">
+        <div class="container">
+          <div class="header__top">
+            <div class="header__icon icon icon-menu--open"></div>
+            <a href="#index.html" class="header__logo"><img src="/src/images/logo.svg" alt=""></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </header>
+
+  <main class="main">
+
+    <section class="event">
+      <div class="container">
+        <h2 class="event__title">Актуальні події</h2>
+
+        <div class="event__wrapper">
+
+          <article class="event__item">
+            <img src="/src/images/events/01.jpg" alt="" class="event__img">
+            <div class="event__content">
+              <div class="event__header">
+                <h4 class="event__desc ">ВИСТАВКА</h4>
+                <p class="event__date ">26.08-29.11.2019</p>
+              </div>
+              <h3 class="event__label">Йду i повертаюсь</h3>
+              <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку
+                -
+                українське мистецтво другої
+                половини 1980-1995 років.</p>
+            </div>
+          </article>
+
+          <article class="event__item">
+            <img src="/src/images/events/02.jpg" alt="" class="event__img">
+            <div class="event__content">
+              <div class="event__header">
+                <h4 class="event__desc">ВИСТАВКА</h4>
+                <p class="event__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="event__label">I спогади i мрії</h3>
+              <p class="event__text">Національний художній музей України до 100 річчя від дня народження видатної
+                української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади i мрії».</p>
+            </div>
+          </article>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="lection">
+      <div class="lection__wrapper">
+        <img src="/src/images/lection/01.jpg" alt="" class="lection__img">
+        <img src="/src/images/lection/01-desktop.jpg" alt="" class="lection__img--desktop">
+        <div class="container">
+          <img src="/src/images/lection/01.jpg" alt="" class="lection__img--tablet">
+          <div class="lection__content">
+            <div class="lection__header">
+              <h4 class="lection__desc">ЛЕКЦІЯ</h4>
+              <p class="lection__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lection__label">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="container">
+        <h2 class="gallery__title">Галерея</h2>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="/src/images/gallery/01.jpg" alt="" class="swiper-img swiper-img-01">
+            </div>
+            <div class="swiper-slide"><img src="/src/images/gallery/02.jpg" alt="" class="swiper-img swiper-img-01">
+            </div>
+            <div class="swiper-slide"><img src="/src/images/gallery/03.jpg" alt="" class="swiper-img swiper-img-01">
+            </div>
+            ...
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need scrollbar -->
+          <!-- <div class="swiper-scrollbar"></div> -->
+        </div>
+
+
+      </div>
+    </section>
+
+  </main>
+
+
+
+
+
+
+
+
+
+
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
