--- a/src/index.html
+++ b/src/index.html
@@ -16,44 +16,56 @@
 
     <header class="header">
       <div class="header__inner container">
-        <div class="header__left">
+        <div class="header__menu ">
           <button
             class="header__burder"
             type="button"
           >
-            <img
-              src="./images/icons/burger.svg"
-              alt="burger"
-            >
-          </button>
-          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <div class="header__action">ПОДІЇ</div>
-          <div class="header__ticket">
-            <a
-              href="#"
-              class="header__ticket-link"
-            >
-              КВИТКИ
-            </a>
-            <button class="header__ticket-button button button--color-green">
 
-            </button>
-          </div>
-        </div>
-        <div class="header__rigth">
+          </button>
           <a
             href="#"
             class="header__logo"
-          ><img
+          >
+            <img
               src="./images/logo.svg"
               alt="logo"
               class="header__logo-image"
               width="170"
               height="72"
               loading="lazy"
-            ></a>
+            >
+          </a>
+        </div>
+
+
+
+
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="header__item">
+
+          <div class="header__bottom">
+            <div class="header__action">ПОДІЇ</div>
+            <div class="header__ticket">
+              <a
+                href="#"
+                class="header__ticket-link"
+              >
+                КВИТКИ
+              </a>
+              <button class="header__ticket-button button button--color-green">
+
+              </button>
+
+            </div>
+          </div>
         </div>
       </div>
+
+
+
+
     </header>
 
     <main class="main"></main>
