--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,13 @@
     />
   </head>
   <body>
-
     <header class="header">
       <div class="header__inner container">
-        <div class="header__menu ">
+        <div class="header__menu">
           <button
             class="header__burder"
             type="button"
-          >
-
-          </button>
+          ></button>
           <a
             href="#"
             class="header__logo"
@@ -34,38 +31,36 @@
               width="170"
               height="72"
               loading="lazy"
-            >
+            />
           </a>
         </div>
 
-
-
-
         <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-
         <div class="header__item">
-
-          <div class="header__bottom">
-            <div class="header__action">ПОДІЇ</div>
-            <div class="header__ticket">
-              <a
-                href="#"
-                class="header__ticket-link"
-              >
-                КВИТКИ
-              </a>
-              <button class="header__ticket-button button button--color-green">
-
-              </button>
-
-            </div>
+          <div class="header__action">ПОДІЇ</div>
+          <div class="header__ticket">
+            <a
+              href="#"
+              class="header__ticket-link"
+            >
+              КВИТКИ
+            </a>
+            <button
+              class="header__ticket-button button button--color-green"
+            ></button>
           </div>
         </div>
+
+          <img
+            class="header__bg"
+            src="./images/header-bg.jpg"
+            alt="rigth-bg"
+            width="725"
+            height="655"
+            loading="lazy"
+          />
+
       </div>
-
-
-
-
     </header>
 
     <main class="main"></main>
