fix images add hover fix overlay

--- a/src/index.html
+++ b/src/index.html
@@ -102,11 +102,13 @@
       <div class="page__content">
         <h1 class="current-events__title">Актуальні події</h1>
         <div class="current-events__exhibition">
-          <img
-            src="./images/exhibition-1.png"
-            class="current-events__image"
-            alt="Exhibition photo"
-          />
+          <div class="current-events__picture">
+            <img
+              src="./images/exhibition-1.png"
+              class="current-events__image"
+              alt="Exhibition photo"
+            />
+          </div>
           <div class="current-events__textarea">
             <div class="current-events__schedule">
               <p class="current-events__text">Виставка</p>
@@ -127,11 +129,13 @@
           </div>
         </div>
         <div class="current-events__exhibition">
-          <img
-            src="./images/exhibition-2.png"
-            class="current-events__image"
-            alt="Exhibition photo"
-          />
+          <div class="current-events__picture">
+            <img
+              src="./images/exhibition-2.png"
+              class="current-events__image"
+              alt="Exhibition photo"
+            />
+          </div>
           <div class="current-events__textarea">
             <div class="current-events__schedule">
               <p class="current-events__text">Виставка</p>
@@ -178,10 +182,34 @@
     >
       <h1 class="gallery__title">Галерея</h1>
       <div class="gallery__images">
-        <div class="gallery__image gallery__image--1"></div>
-        <div class="gallery__image gallery__image--2"></div>
-        <div class="gallery__image gallery__image--3"></div>
-        <div class="gallery__image gallery__image--4"></div>
+        <div class="gallery__image gallery__image--1">
+          <img
+            src="./images/gallery-image-1.png"
+            class="gallery__photo-1"
+            alt="Gallery photo"
+          />
+        </div>
+        <div class="gallery__image gallery__image--2">
+          <img
+            src="./images/gallery-image-2.png"
+            class="gallery__photo-2"
+            alt="Gallery photo"
+          />
+        </div>
+        <div class="gallery__image gallery__image--3">
+          <img
+            src="./images/gallery-image-3.png"
+            class="gallery__photo-3"
+            alt="Gallery photo"
+          />
+        </div>
+        <div class="gallery__image gallery__image--4">
+          <img
+            src="./images/gallery-image-4.png"
+            class="gallery__photo-4"
+            alt="Gallery photo"
+          />
+        </div>
       </div>
       <div class="gallery__dots">
         <div class="gallery__dot gallery__dot--green"></div>
