--- a/src/index.html
+++ b/src/index.html
@@ -99,61 +99,59 @@
       class="current-events"
       id="current-events"
     >
-      <div class="page__content">
-        <h1 class="current-events__title">Актуальні події</h1>
-        <div class="current-events__exhibition">
-          <div class="current-events__picture">
-            <img
-              src="./images/exhibition-1.png"
-              class="current-events__image"
-              alt="Exhibition photo"
-            />
-          </div>
-          <div class="current-events__textarea">
-            <div class="current-events__schedule">
-              <p class="current-events__text">Виставка</p>
-              <p class="current-events__date">26.08-29.11.2019</p>
-            </div>
-            <div class="current-events__subtitle">
-              <p class="current-events__name">Йду і повертаюсь</p>
-              <a
-                href="#current-events"
-                class="current-events__square"
-              ></a>
-            </div>
-            <p class="current-events__info">
-              Національний Художній Музей України презентує унікальну частину
-              колекції Градобанку - українське мистецтво другої половини
-              1980-1995 років.
-            </p>
-          </div>
+      <h1 class="current-events__title">Актуальні події</h1>
+      <div class="current-events__exhibition">
+        <div class="current-events__picture">
+          <img
+            src="./images/exhibition-1.png"
+            class="current-events__image"
+            alt="Exhibition photo"
+          />
         </div>
-        <div class="current-events__exhibition">
-          <div class="current-events__picture">
-            <img
-              src="./images/exhibition-2.png"
-              class="current-events__image"
-              alt="Exhibition photo"
-            />
+        <div class="current-events__textarea">
+          <div class="current-events__schedule">
+            <p class="current-events__text">Виставка</p>
+            <p class="current-events__date">26.08-29.11.2019</p>
           </div>
-          <div class="current-events__textarea">
-            <div class="current-events__schedule">
-              <p class="current-events__text">Виставка</p>
-              <p class="current-events__date">26.08-29.11.2019</p>
-            </div>
-            <div class="current-events__subtitle">
-              <p class="current-events__name">І спогади і мрії</p>
-              <a
-                href="#current-events"
-                class="current-events__square"
-              ></a>
-            </div>
-            <p class="current-events__info">
-              Національний художній музей України до 100 річчя від дня
-              народження видатної української художниці Тетяни Яблонської
-              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </p>
+          <div class="current-events__subtitle">
+            <p class="current-events__name">Йду і повертаюсь</p>
+            <a
+              href="#current-events"
+              class="current-events__square"
+            ></a>
           </div>
+          <p class="current-events__info">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
+          </p>
+        </div>
+      </div>
+      <div class="current-events__exhibition">
+        <div class="current-events__picture">
+          <img
+            src="./images/exhibition-2.png"
+            class="current-events__image"
+            alt="Exhibition photo"
+          />
+        </div>
+        <div class="current-events__textarea">
+          <div class="current-events__schedule">
+            <p class="current-events__text">Виставка</p>
+            <p class="current-events__date">26.08-29.11.2019</p>
+          </div>
+          <div class="current-events__subtitle">
+            <p class="current-events__name">І спогади і мрії</p>
+            <a
+              href="#current-events"
+              class="current-events__square"
+            ></a>
+          </div>
+          <p class="current-events__info">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
         </div>
       </div>
       <div class="current-events__lecture">
