remove scroll fix form

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,11 @@
       <p class="email__subtitle">
         Бути в курсі всіх актуальних подій та останніх новин.
       </p>
-      <form class="email__form">
+      <form
+        class="email__form"
+        onsubmit="this.reset();
+            return false;"
+      >
         <input
           class="email__input"
           type="email"
