--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,14 @@
             />
           </a>
         </div>
-
+        <img
+          class="header__bg"
+          src="./images/header-bg.jpg"
+          alt="rigth-bg"
+          width="725"
+          height="655"
+          loading="lazy"
+        />
         <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
         <div class="header__item">
           <div class="header__action">ПОДІЇ</div>
@@ -50,19 +57,54 @@
             ></button>
           </div>
         </div>
-
-          <img
-            class="header__bg"
-            src="./images/header-bg.jpg"
-            alt="rigth-bg"
-            width="725"
-            height="655"
-            loading="lazy"
-          />
-
       </div>
     </header>
 
+    <aside
+      class="menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__main">
+          <button class="close__menu"></button>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a
+                href=""
+                class="menu__link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a
+                href=""
+                class="menu__link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="menu__item">
+              <a
+                href=""
+                class="menu__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a
+                href=""
+                class="menu__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="menu__schedule"></div>
+      </div>
+    </aside>
     <main class="main"></main>
 
     <footer class="footer"></footer>
