add slider for mobile devices

--- a/src/index.html
+++ b/src/index.html
@@ -244,8 +244,9 @@
               class="gallery__image gallery__image--3" alt="image3">
               <img src="./images/gallery/gal4.jpeg"
               class="gallery__image gallery__image--4" alt="image4">
-
             </div>
+
+            <div class="gallery__navigation"></div>
 
 
           </div>
