--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,6 @@
 
             <div class="gallery__navigation"></div>
 
-
           </div>
         </div>
       </section>
@@ -267,7 +266,7 @@
                 id="form"
                 action="#"
                 class="subscription__form"
-                onsubmit="this.reset(); window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"
+                onsubmit="this.reset(); return false;"
               >
               <input
                 type="email"
@@ -339,7 +338,7 @@
             <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
             <p>факс +38 (044) 278-74-54</p>
             <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
-
+            <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="scroll-to-top"></button>
           </div>
 
           <div class="footer__divider"></div>
