--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <h1 class="header__title">Художній музей</h1>
 
             <a
-              href="#"
+              href="#events"
               class="button header__button"
             >
               <span class="button__text">Квитки</span>
@@ -114,13 +114,13 @@
                   <a href="#gallery" class="menu__link">Галерея</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Про Нас</a>
+                  <a href="#subscription" class="menu__link">Про Нас</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Виставки та події</a>
+                  <a href="#events" class="menu__link">Виставки та події</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Контакти</a>
+                  <a href="#contacts" class="menu__link">Контакти</a>
                 </li>
               </ul>
             </nav>
@@ -147,7 +147,7 @@
                 </li>
               </ul>
               <div class="schedule__descr">
-                <p>Вихідні: понеділок, вівторок</p>
+                <p><strong>Вихідні:</strong> понеділок, вівторок</p>
                 <p>Каса припиняє роботу за 1 годину
                 до закриття музею
                 </p>
@@ -332,7 +332,7 @@
               </div>
             </div>
           </div>
-          <div class="footer__address">
+          <div id="contacts" class="footer__address">
             <div class="schedule__header">Контакти:</div>
             <p>вул. М. Грушевського, 6; Київ, 01001</p>
             <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
@@ -349,13 +349,13 @@
                 <a href="#gallery" class="menu__link">Галерея</a>
               </li>
               <li class="menu__item">
-                <a href="#gallery" class="menu__link">Про Нас</a>
+                <a href="#subscription" class="menu__link">Про Нас</a>
               </li>
               <li class="menu__item">
-                <a href="#gallery" class="menu__link">Виставки та події</a>
+                <a href="#events" class="menu__link">Виставки та події</a>
               </li>
               <li class="menu__item">
-                <a href="#gallery" class="menu__link">Контакти</a>
+                <a href="#contacts" class="menu__link">Контакти</a>
               </li>
             </ul>
           </nav>
