--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
 
       <div class="hero">
         <a
-          href="/"
+          href="#"
           class="hero__logo logo"
         >
           <img
@@ -295,11 +295,11 @@
               />
             </a>
             <div class="social">
+              <a target="_blank" class="social__icon social__icon--fb"
+                href="https://www.facebook.com/namu.museum/"></a>
 
-              <a class="social__icon social__icon--fb" href="https://www.facebook.com/namu.museum/"></a>
-
-              <a class="social__icon social__icon--in" href="https://www.instagram.com/namu.museum/"></a>
-
+              <a target="_blank" class="social__icon social__icon--in"
+                href="https://www.instagram.com/namu.museum/"></a>
             </div>
           </div>
 
