fix logo link, address link, buttons cursor type

--- a/src/index.html
+++ b/src/index.html
@@ -287,7 +287,7 @@
       <div class="container">
         <div class="footer__top">
           <div class="footer__logo-social">
-            <a href="/" class="footer__logo logo">
+            <a href="#" class="footer__logo logo">
               <img
                 class="logo__img"
                 src="./images/logo.svg"
@@ -334,10 +334,11 @@
           </div>
           <div id="contacts" class="footer__address">
             <div class="schedule__header">Контакти:</div>
-            <p>вул. М. Грушевського, 6; Київ, 01001</p>
-            <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+            <a class="footer__link" target="_blank"
+            href="https://maps.app.goo.gl/XAkLJQcsUd7M1h1D6">вул. М. Грушевського, 6; Київ, 01001</a>
+            <a class="footer__link" href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
             <p>факс +38 (044) 278-74-54</p>
-            <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            <a class="footer__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
             <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="scroll-to-top"></button>
           </div>
 
