--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <header class="header">
-    <div class="header__content">
+    <div class="header__content overlay">
 
       <div class="header__bottom">
         <div class="container">
@@ -46,6 +46,64 @@
       </div>
 
     </div>
+
+    <aside class="menu">
+      <div class="container">
+        <div class="menu__wrapper">
+
+          <div class="menu__nav">
+            <div id="menu-toggle" class="menu__icon icon icon-menu--close"></div>
+            <ul class="menu__list">
+              <div class="menu__items">
+                <li class="menu__item"><a href="#" class="menu__item--link">Галерея</a></li>
+                <li class="menu__item"><a href="#" class="menu__item--link">Виставки та події</a></li>
+              </div>
+              <div class="menu__items">
+                <li class="menu__item"><a href="#" class="menu__item--link">Про нас</a></li>
+                <li class="menu__item"><a href="#" class="menu__item--link">Контакти</a></li>
+              </div>
+            </ul>
+          </div>
+
+          <div class="menu__schedule">
+            <h4 class="menu__schedule-title">Графік роботи</h4>
+            <div class="menu__schedule-wrapper">
+              <div class="menu__schedule-days">
+
+                <div class="menu__schedule-day">
+                  <p class="menu__schedule-time">12:00 - 20:00 </p>
+                  <p class="menu__schedule-name">середа</p>
+                </div>
+                <div class="menu__schedule-day">
+                  <p class="menu__schedule-time">12:00 - 20:00</p>
+                  <p class="menu__schedule-name">четвер</p>
+                </div>
+                <div class="menu__schedule-day">
+                  <p class="menu__schedule-time">12:00 - 20:00</p>
+                  <p class="menu__schedule-name">п'ятниця</p>
+                </div>
+                <div class="menu__schedule-day">
+                  <p class="menu__schedule-time">11:00 - 19:00</p>
+                  <p class="menu__schedule-name">субота</p>
+                </div>
+                <div class="menu__schedule-day">
+                  <p class="menu__schedule-time">11:00 - 19:00</p>
+                  <p class="menu__schedule-name">неділя</p>
+                </div>
+
+              </div>
+              <p class="menu__schedule-day-off"><span>Вихідні:</span> понеділок, вівторок</br>Каса припиняє роботу за 1
+                годину до
+                закриття
+                музею
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </aside>
   </header>
 
   <main class="main">
@@ -110,6 +168,31 @@
       <div class="container">
         <h2 class="gallery__title">Галерея</h2>
 
+        <!-- gallery for desktop -->
+        <div class="gallery__wrapper">
+          <article class="gallery__item">
+            <div class="gallery__photos">
+              <a href="#" class="gallery__link gallery__link--square">
+                <img src="/src/images/gallery/gallery-desktop/01.jpg" alt="gallery1" class="gallery__photo" />
+              </a>
+              <a href="#" class="gallery__link gallery__link--wide">
+                <img src="/src/images/gallery/gallery-desktop/02.jpg" alt="gallery2" class="gallery__photo" />
+              </a>
+            </div>
+          </article>
+
+          <article class="gallery__item">
+            <div class="gallery__photos">
+              <a href="#" class="gallery__link gallery__link--wide">
+                <img src="/src/images/gallery/gallery-desktop/03.jpg" alt="gallery3" class="gallery__photo" />
+              </a>
+              <a href="#" class="gallery__link gallery__link--square">
+                <img src="/src/images/gallery/gallery-desktop/04.jpg" alt="gallery4" class="gallery__photo" />
+              </a>
+            </div>
+          </article>
+        </div>
+
         <!-- Slider main container -->
         <div class="swiper">
           <!-- Additional required wrapper -->
@@ -131,8 +214,105 @@
         </div>
 
 
+
       </div>
     </section>
+
+    <section class="subscribe">
+      <div class="subscribe__bg">
+        <div class="container">
+          <div class="subscribe__content">
+            <h2 class="subscribe__title">Підписка</h2>
+            <p class="subscribe__desc">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form class="subscribe__form" action="#">
+              <input class="subscribe__input" type="email" placeholder="E-mail">
+              <a href="#" class="subscribe__button-arrow"><img src="/src/images/subscribe/arrow.svg" alt=""></a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <a href="index.html" class="footer__logo"><img src="/src/images/logo.svg" alt=""></a>
+            <div class="footer__icons">
+              <a href="#" class="footer__icon"><img src="/src/images/footer/facebook.svg" alt=""></a>
+              <a href="#" class="footer__icon"><img src="/src/images/footer/instagram.svg" alt=""></a>
+            </div>
+          </div>
+
+          <div class="footer__main">
+            <div class="footer__flex">
+              <div class="footer__schedule">
+                <h4 class="footer__schedule-title">Графік роботи</h4>
+                <div class="footer__schedule-days">
+
+                  <div class="footer__schedule-day">
+                    <p class="footer__schedule-time">12:00 - 20:00 </p>
+                    <p class="footer__schedule-name">середа</p>
+                  </div>
+                  <div class="footer__schedule-day">
+                    <p class="footer__schedule-time">12:00 - 20:00</p>
+                    <p class="footer__schedule-name">четвер</p>
+                  </div>
+                  <div class="footer__schedule-day">
+                    <p class="footer__schedule-time">12:00 - 20:00</p>
+                    <p class="footer__schedule-name">п'ятниця</p>
+                  </div>
+                  <div class="footer__schedule-day">
+                    <p class="footer__schedule-time">11:00 - 19:00</p>
+                    <p class="footer__schedule-name">субота</p>
+                  </div>
+                  <div class="footer__schedule-day">
+                    <p class="footer__schedule-time">11:00 - 19:00</p>
+                    <p class="footer__schedule-name">неділя</p>
+                  </div>
+
+                </div>
+                <p class="footer__main-day-off">Вихідні понеділок, вівторок</br>Каса припиняє роботу за 1 годину до
+                  закриття
+                  музею
+                </p>
+              </div>
+
+              <div class="footer__contacts">
+                <h4 class="footer__contacts-title">Контакти:</h4>
+                <p class="footer__contacts-info">вул. М. Грушевського, 6; Київ, 01001</br>
+                  тел. +38 (044) 278-13-57</br>
+                  факс +38 (044) 278-74-54</br>
+                  e-mail: info@namu.kiev.ua</p>
+              </div>
+            </div>
+
+            <a href="index.html" class="footer__btn"><img src="/src/images/footer/arrow-top.svg" alt=""></a>
+          </div>
+
+          <nav class="footer__nav">
+            <ul class="footer__list">
+              <div class="footer__items">
+                <li class="footer__item"><a href="#" class="footer__item--link">Галерея</a></li>
+                <li class="footer__item"><a href="#" class="footer__item--link">Виставки та події</a></li>
+              </div>
+              <div class="footer__items">
+                <li class="footer__item"><a href="#" class="footer__item--link">Про нас</a></li>
+                <li class="footer__item"><a href="#" class="footer__item--link">Контакти</a></li>
+              </div>
+
+            </ul>
+          </nav>
+
+        </div>
+
+        <div class="footer__desc">
+          <p class="footer__text">Designed by Zhyriada Marina</p>
+          <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
+      </div>
+    </footer>
 
   </main>
 
