--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header__content overlay">
+  <header id="header" class="header">
+    <div class="header__content ">
 
       <div class="header__bottom">
         <div class="container">
@@ -29,7 +29,7 @@
               КВИТКИ
             </button>
             <div class="header__info">
-              <div class="header__info-desc">події</div>
+              <a href="#event" class="header__info-desc">події</a>
               <div class="header__info-line"></div>
             </div>
           </div>
@@ -39,28 +39,28 @@
       <div class="header__wrapper">
         <div class="container">
           <div class="header__top">
-            <div class="header__icon icon icon-menu--open"></div>
-            <a href="#index.html" class="header__logo"><img src="/src/images/logo.svg" alt=""></a>
+            <a href="#menu" class="header__icon icon icon-menu--open"></a>
+            <a href="#header" class="header__logo"><img src="/src/images/logo.svg" alt=""></a>
           </div>
         </div>
       </div>
 
     </div>
 
-    <aside class="menu">
+    <aside id="menu" class="menu ">
       <div class="container">
         <div class="menu__wrapper">
 
           <div class="menu__nav">
-            <div id="menu-toggle" class="menu__icon icon icon-menu--close"></div>
+            <a href="#" class="menu__icon icon icon-menu--close"></a>
             <ul class="menu__list">
               <div class="menu__items">
-                <li class="menu__item"><a href="#" class="menu__item--link">Галерея</a></li>
-                <li class="menu__item"><a href="#" class="menu__item--link">Виставки та події</a></li>
+                <li class="menu__item"><a href="#gallery" class="menu__item--link">Галерея</a></li>
+                <li class="menu__item"><a href="#event" class="menu__item--link">Виставки та події</a></li>
               </div>
               <div class="menu__items">
-                <li class="menu__item"><a href="#" class="menu__item--link">Про нас</a></li>
-                <li class="menu__item"><a href="#" class="menu__item--link">Контакти</a></li>
+                <li class="menu__item"><a href="#subscribe" class="menu__item--link">Про нас</a></li>
+                <li class="menu__item"><a href="#contact" class="menu__item--link">Контакти</a></li>
               </div>
             </ul>
           </div>
@@ -92,7 +92,8 @@
                 </div>
 
               </div>
-              <p class="menu__schedule-day-off"><span>Вихідні:</span> понеділок, вівторок</br>Каса припиняє роботу за 1
+              <p class="menu__schedule-day-off"><span>Вихідні:</span> понеділок, вівторок</br>Каса припиняє роботу за
+                1
                 годину до
                 закриття
                 музею
@@ -108,7 +109,7 @@
 
   <main class="main">
 
-    <section class="event">
+    <section id="event" class="event">
       <div class="container">
         <h2 class="event__title">Актуальні події</h2>
 
@@ -122,7 +123,8 @@
                 <p class="event__date ">26.08-29.11.2019</p>
               </div>
               <h3 class="event__label">Йду i повертаюсь</h3>
-              <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку
+              <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку
                 -
                 українське мистецтво другої
                 половини 1980-1995 років.</p>
@@ -164,7 +166,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section id="gallery" class="gallery">
       <div class="container">
         <h2 class="gallery__title">Галерея</h2>
 
@@ -218,7 +220,7 @@
       </div>
     </section>
 
-    <section class="subscribe">
+    <section id="subscribe" class="subscribe">
       <div class="subscribe__bg">
         <div class="container">
           <div class="subscribe__content">
@@ -233,11 +235,11 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer id="contact" class="footer">
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
-            <a href="index.html" class="footer__logo"><img src="/src/images/logo.svg" alt=""></a>
+            <a href="#header" class="footer__logo"><img src="/src/images/logo.svg" alt=""></a>
             <div class="footer__icons">
               <a href="#" class="footer__icon"><img src="/src/images/footer/facebook.svg" alt=""></a>
               <a href="#" class="footer__icon"><img src="/src/images/footer/instagram.svg" alt=""></a>
@@ -287,18 +289,18 @@
               </div>
             </div>
 
-            <a href="index.html" class="footer__btn"><img src="/src/images/footer/arrow-top.svg" alt=""></a>
+            <a href="#header" class="footer__btn"><img src="/src/images/footer/arrow-top.svg" alt=""></a>
           </div>
 
           <nav class="footer__nav">
             <ul class="footer__list">
               <div class="footer__items">
-                <li class="footer__item"><a href="#" class="footer__item--link">Галерея</a></li>
-                <li class="footer__item"><a href="#" class="footer__item--link">Виставки та події</a></li>
+                <li class="footer__item"><a href="#gallery" class="footer__item--link">Галерея</a></li>
+                <li class="footer__item"><a href="#event" class="footer__item--link">Виставки та події</a></li>
               </div>
               <div class="footer__items">
-                <li class="footer__item"><a href="#" class="footer__item--link">Про нас</a></li>
-                <li class="footer__item"><a href="#" class="footer__item--link">Контакти</a></li>
+                <li class="footer__item"><a href="#subscribe" class="footer__item--link">Про нас</a></li>
+                <li class="footer__item"><a href="#contact" class="footer__item--link">Контакти</a></li>
               </div>
 
             </ul>
@@ -314,17 +316,9 @@
       </div>
     </footer>
 
+
   </main>
-
-
-
-
-
-
-
-
-
-
+  <div class="overlay"></div>
   <script src="scripts/main.js"></script>
 </body>
 
