add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <!-- <div class="overlay"> -->
   <header id="header" class="header">
     <div class="header__content ">
 
@@ -48,8 +49,8 @@
     </div>
 
     <aside id="menu" class="menu ">
-      <div class="container">
-        <div class="menu__wrapper">
+      <div class="menu__wrapper">
+        <div class="container menu__content">
 
           <div class="menu__nav">
             <a href="#" class="menu__icon icon icon-menu--close"></a>
@@ -318,7 +319,7 @@
 
 
   </main>
-  <div class="overlay"></div>
+  <!-- </div> -->
   <script src="scripts/main.js"></script>
 </body>
 
