--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,8 @@
             <p class="subscribe__desc">Бути в курсі всіх актуальних подій та останніх новин.</p>
             <form class="subscribe__form" action="#">
               <input class="subscribe__input" type="email" placeholder="E-mail">
-              <a href="#" class="subscribe__button-arrow"><img src="/src/images/subscribe/arrow.svg" alt=""></a>
+              <button type="Reset" value="Reset" class="subscribe__button-arrow"><img
+                  src="/src/images/subscribe/arrow.svg" alt=""></button>
             </form>
           </div>
         </div>
