--- a/src/index.html
+++ b/src/index.html
@@ -12,61 +12,60 @@
       href="./styles/main.scss"
     />
   </head>
-  <body>
+  <body class="wrapper">
     <header class="header">
-      <div class="header__inner container">
-        <div class="header__menu">
+      <div class="header__top">
+        <div class="header__top-container container">
           <button
             class="header__burder"
             type="button"
           ></button>
           <a
             href="#"
-            class="header__logo"
+            class="header__logo logo"
           >
-            <img
-              src="./images/logo.svg"
-              alt="logo"
-              class="header__logo-image"
-              width="170"
-              height="72"
-              loading="lazy"
-            />
+            <div class="logo__item">NA</div>
+            <div class="logo__item">MU</div>
           </a>
         </div>
-        <img
-          class="header__bg"
-          src="./images/header-bg.jpg"
-          alt="rigth-bg"
-          width="725"
-          height="655"
-          loading="lazy"
-        />
-        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-        <div class="header__item">
-          <div class="header__action">ПОДІЇ</div>
-          <div class="header__ticket">
-            <a
-              href="#"
-              class="header__ticket-link"
-            >
-              КВИТКИ
-            </a>
-            <button
-              class="header__ticket-button button button--color-green"
-            ></button>
+      </div>
+      <div class="header__bottom">
+        <div class="header__bottom-container container">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__item">
+            <div class="header__action">ПОДІЇ</div>
+            <div class="header__ticket">
+              <a
+                href="#"
+                class="header__link"
+              >
+                КВИТКИ
+              </a>
+              <button
+                class="header__button button button--color-green"
+              ></button>
+            </div>
           </div>
         </div>
       </div>
+
+      <img
+        class="header__bg"
+        src="./images/header-bg.jpg"
+        alt="rigth-bg"
+        width="725"
+        height="655"
+        loading="lazy"
+      />
     </header>
 
     <aside
       class="menu"
       id="menu"
     >
-      <div class="container">
+      <div class="menu__wrapper">
         <div class="menu__main">
-          <button class="close__menu"></button>
+          <button class="menu__close"></button>
           <ul class="menu__list">
             <li class="menu__item">
               <a
@@ -102,10 +101,107 @@
             </li>
           </ul>
         </div>
-        <div class="menu__schedule"></div>
+
+        <div class="menu__schedule schedule">
+          <h4 class="schedule__title">Графік роботи</h4>
+          <ul class="schedule__list">
+            <li class="schedule__item">12:00 — 20:00 середа</li>
+            <li class="schedule__item">12:00 — 20:00 четвер</li>
+            <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
+            <li class="schedule__item">11:00 — 19:00 субота</li>
+            <li class="schedule__item">11:00 — 19:00 неділя</li>
+          </ul>
+          <div class="schedule__info">
+            <p>
+              <span class="schedule__highliter">Вихідні</span>
+              : понеділок, вівторок
+            </p>
+            <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+          </div>
+        </div>
       </div>
     </aside>
-    <main class="main"></main>
+
+    <main class="main">
+      <section class="events">
+        <div class="container">
+          <h2 class="events__title title">Актуальні події</h2>
+          <article class="events__item event">
+            <img
+              class="event__image"
+              src="./images/events/1.jpg"
+              alt="event"
+              width="700"
+              height="520"
+              loading="lazy"
+            />
+            <div class="event__info">
+              <div class="event__present">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title">
+                Йду і повертаюсь
+                <span class="event__decor"></span>
+              </h3>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="events__item event">
+            <img
+              class="event__image"
+              src="./images/events/2.jpg"
+              alt="event"
+              width="700"
+              height="520"
+              loading="lazy"
+            />
+            <div class="event__info">
+              <div class="event__present">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title">
+                І спогади і мрії
+                <span class="event__decor"></span>
+              </h3>
+              <p class="event__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+
+          <article class="events__item lecture">
+            <div class="lecture__image">
+              <img
+                class="lecture__photo"
+                src="./images/events/3.jpg"
+                alt="event"
+                loading="lazy"
+              />
+            </div>
+            <div class="event__info lecture__info">
+              <div class="event__present lecture__present">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title lecture__title">
+                Від класицизму до
+                <br />
+                романтизму
+              </h3>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer"></footer>
 
