add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -410,15 +410,19 @@
         <div class="footer-info__contacts">
           <h6 class="footer-info__contacts-title">Контакти:</h6>
           <p class="footer-info__contacts-address">
-            вул. М. Грушевського, 6;
+            <a href="https://maps.app.goo.gl/H3FwjGqnQH9EuEiK7" target="_blank"
+              class="footer-info__contacts-address-link"
+            >
+              вул. М. Грушевського, 6;
+              <br />
+              Київ, 01001
+            </a>
             <br />
-            Київ, 01001
+            <a href="tel:+38(044)278-13-57" class="footer-info__contacts-tel-link">тел. +38 (044) 278-13-57</a>
             <br />
-            тел. +38 (044) 278-13-57
+            <a href="tel:+38(044)278-74-54" class="footer-info__contacts-fax-link">факс +38 (044) 278-74-54</a>
             <br />
-            факс +38 (044) 278-74-54
-            <br />
-            e-mail: info@namu.kiev.ua
+            <a href="mailto:info@namu.kiev.ua" class="footer-info__contacts-mail-link">e-mail: info@namu.kiev.ua</a>
           </p>
         </div>
       </div>
