--- a/src/index.html
+++ b/src/index.html
@@ -243,8 +243,10 @@
           <div class="footer__top">
             <a href="#header" class="footer__logo"><img src="/src/images/logo.svg" alt=""></a>
             <div class="footer__icons">
-              <a href="#" class="footer__icon"><img src="/src/images/footer/facebook.svg" alt=""></a>
-              <a href="#" class="footer__icon"><img src="/src/images/footer/instagram.svg" alt=""></a>
+              <a href="https://www.facebook.com/?locale=uk_UA" target="_blank" class="footer__icon"><img
+                  src="/src/images/footer/facebook.svg" alt=""></a>
+              <a href="https://www.instagram.com/" target="_blank" class="footer__icon"><img
+                  src="/src/images/footer/instagram.svg" alt=""></a>
             </div>
           </div>
 
@@ -284,10 +286,14 @@
 
               <div class="footer__contacts">
                 <h4 class="footer__contacts-title">Контакти:</h4>
-                <p class="footer__contacts-info">вул. М. Грушевського, 6; Київ, 01001</br>
-                  тел. +38 (044) 278-13-57</br>
-                  факс +38 (044) 278-74-54</br>
-                  e-mail: info@namu.kiev.ua</p>
+                <div class="footer__contacts-info">
+                  <a target="_blank"
+                    href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.449395,30.5307834,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D">
+                    вул. М. Грушевського, 6; Київ, 01001</a></br>
+                  <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a></br>
+                  <a href="tel:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a></br>
+                  <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                </div>
               </div>
             </div>
 
