section gallery start

--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,55 @@
           </article>
         </div>
       </section>
+
+      <section class="gallery">
+        <div class="container">
+          <h2 class="gallery__title title">Галерея</h2>
+          <div class="gallery__inner">
+            <ul class="gallery__list">
+              <li class="gallery__item">
+                <img
+                  src="./images/gallery/1.jpg"
+                  alt="photo"
+                  class="gallery__image"
+                  loading="lazy"
+                />
+              </li>
+
+              <li class="gallery__item gallery__item--wide">
+                <img
+                  src="./images/gallery/2.jpg"
+                  alt="photo"
+                  class="gallery__image"
+                  loading="lazy"
+                />
+              </li>
+              <li class="gallery__item gallery__item--wide">
+                <img
+                  src="./images/gallery/3.jpg"
+                  alt="photo"
+                  class="gallery__image"
+                  loading="lazy"
+                />
+              </li>
+              <li class="gallery__item">
+                <img
+                  src="./images/gallery/4.jpg"
+                  alt="photo"
+                  class="gallery__image"
+                  loading="lazy"
+                />
+              </li>
+            </ul>
+            <ul class="gallery__pagination-list">
+              <li class="gallery__pagination-item"></li>
+              <li class="gallery__pagination-item"></li>
+              <li class="gallery__pagination-item"></li>
+              <li class="gallery__pagination-item"></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer"></footer>
