--- a/src/index.html
+++ b/src/index.html
@@ -250,9 +250,173 @@
           </div>
         </div>
       </section>
+
+      <section class="subscribe">
+        <div class="container">
+          <div class="subscribe__inner">
+            <div class="subscribe__info">
+              <div class="subscribe__title title">Підписка</div>
+              <div class="subscribe__description">
+                <p>Бути в курсі всіх актуальних подій та останніх новин.</p>
+              </div>
+            </div>
+            <form class="subscribe__form">
+              <input
+                type="email"
+                class="subscribe__input"
+                placeholder="E-mail"
+              />
+              <button
+                class="subscribe__button button button--color-orange"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__top">
+            <a class="footer__logo">
+              <div>NA</div>
+              <div>MU</div>
+            </a>
+            <div class="footer__socials">
+              <svg
+                class="footer__facebook"
+                width="12"
+                height="24"
+                viewBox="0 0 12 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M2.7198 4.64899C2.7198 5.2538 2.7198 7.9533 2.7198 7.9533H0.302734V11.9938H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93841C11.0465 7.93841 7.70375 7.93841 7.70375 7.93841C7.70375 7.93841 7.70375 5.58776 7.70375 5.17573C7.70375 4.76282 8.24511 4.2074 8.78017 4.2074C9.31423 4.2074 10.4414 4.2074 11.4854 4.2074C11.4854 3.65727 11.4854 1.75647 11.4854 0.000976577C10.0917 0.000976577 8.50612 0.000976577 7.80721 0.000976577C2.59707 0.000697581 2.7198 4.04524 2.7198 4.64899Z"
+                  fill="black"
+                />
+              </svg>
+
+              <svg
+                class="footer__instagram"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#clip0_12716_52)">
+                  <path
+                    d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M12.0001 6.84473C9.15753 6.84473 6.84473 9.15734 6.84473 12.0001C6.84473 14.8426 9.15753 17.1554 12.0001 17.1554C14.8428 17.1554 17.1554 14.8426 17.1554 12.0001C17.1554 9.15734 14.8428 6.84473 12.0001 6.84473Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M18.7191 4.51416C18.4258 4.51416 18.187 4.75293 18.187 5.04626C18.187 5.3396 18.4258 5.57837 18.7191 5.57837C19.0126 5.57837 19.2514 5.33978 19.2514 5.04626C19.2514 4.75275 19.0126 4.51416 18.7191 4.51416Z"
+                    fill="black"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_12716_52">
+                    <rect
+                      width="24"
+                      height="24"
+                      fill="white"
+                    />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+          </div>
+          <div class="footer__schedule schedule">
+            <div class="schedule__name">Графік роботи</div>
+            <ul class="schedule__list">
+              <li class="schedule__item">12:00 — 20:00 середа</li>
+              <li class="schedule__item">12:00 — 20:00 четвер</li>
+              <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
+              <li class="schedule__item">11:00 — 19:00 субота</li>
+              <li class="schedule__item">11:00 — 19:00 неділя</li>
+            </ul>
+            <div class="schedule__text">
+              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <div class="footer__name">Контакти:</div>
+            <address class="footer__address">
+              вул. М. Грушевського, 6; Київ, 01001
+            </address>
+            <a
+              href="tel:+380442781357"
+              class="footer__tel"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+            <a
+              href="fax:+380442787454"
+              class="footer__fax"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__email"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <div class="footer__decor"></div>
+          <div class="footer__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a
+                  href="#"
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href="#"
+                  class="menu__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href="#"
+                  class="menu__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href="#"
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__bottom">
+            <div class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </div>
+            <div class="footer__designer-name">Designed by Zhyriada Marina</div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
