--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,10 @@
       </div>
     </aside>
 
-    <main class="main">
+    <main
+      class="main"
+      id="main"
+    >
       <section class="events">
         <div class="container">
           <h2 class="events__title title">Актуальні події</h2>
@@ -280,7 +283,7 @@
       <div class="container">
         <div class="footer__inner">
           <div class="footer__top">
-            <a class="footer__logo">
+            <a class="footer__logo logo">
               <div>NA</div>
               <div>MU</div>
             </a>
@@ -336,15 +339,57 @@
           <div class="footer__schedule schedule">
             <div class="schedule__name">Графік роботи</div>
             <ul class="schedule__list">
-              <li class="schedule__item">12:00 — 20:00 середа</li>
-              <li class="schedule__item">12:00 — 20:00 четвер</li>
-              <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
-              <li class="schedule__item">11:00 — 19:00 субота</li>
-              <li class="schedule__item">11:00 — 19:00 неділя</li>
+              <li class="schedule__item">
+                <time
+                  class="schedule__time"
+                  datetime="12:00-20:00"
+                >
+                  12:00 — 20:00
+                </time>
+                середа
+              </li>
+              <li class="schedule__item">
+                <time
+                  class="schedule__time"
+                  datetime="12:00-20:00"
+                >
+                  12:00 — 20:00
+                </time>
+                четвер
+              </li>
+              <li class="schedule__item">
+                <time
+                  class="schedule__time"
+                  datetime="12:00-20:00"
+                >
+                  12:00 — 20:00
+                </time>
+                п’ятниця
+              </li>
+              <li class="schedule__item">
+                <time
+                  class="schedule__time"
+                  datetime="11:00-19:00"
+                >
+                  11:00 — 19:00
+                </time>
+                субота
+              </li>
+              <li class="schedule__item">
+                <time
+                  class="schedule__time"
+                  datetime="11:00-19:00"
+                >
+                  11:00 — 19:00
+                </time>
+                неділя
+              </li>
             </ul>
             <div class="schedule__text">
-              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
-              закриття музею
+              <p>
+                Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+                закриття музею
+              </p>
             </div>
           </div>
           <div class="footer__contacts">
@@ -372,7 +417,7 @@
             </a>
           </div>
           <div class="footer__decor"></div>
-          <div class="footer__menu menu">
+          <nav class="footer__menu">
             <ul class="menu__list">
               <li class="menu__item">
                 <a
@@ -407,13 +452,17 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </nav>
           <div class="footer__bottom">
             <div class="footer__copyright">
               Copyright © 2019. All Rights Reserved.
             </div>
             <div class="footer__designer-name">Designed by Zhyriada Marina</div>
           </div>
+          <a
+            href="#main"
+            class="footer__arrow-up button button--arrow-up"
+          ></a>
         </div>
       </div>
     </footer>
