--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   </head>
   <body class="wrapper">
     <header class="header">
-      <div class="header__top">
-        <div class="header__top-container container">
+      <div class="container">
+        <div class="header__top">
           <button
             class="header__burder"
             type="button"
@@ -27,96 +27,110 @@
             <div class="logo__item">NA</div>
             <div class="logo__item">MU</div>
           </a>
+          <img
+            class="header__bg"
+            src="./images/header-bg.jpg"
+            alt="rigth-bg"
+            width="725"
+            height="655"
+            loading="lazy"
+          />
         </div>
-      </div>
-      <div class="header__bottom">
-        <div class="header__bottom-container container">
-          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <div class="header__item">
-            <div class="header__action">ПОДІЇ</div>
-            <div class="header__ticket">
-              <a
-                href="#"
-                class="header__link"
-              >
-                КВИТКИ
-              </a>
-              <button
-                class="header__button button button--color-green"
-              ></button>
+        <div class="header__main">
+          <div class="header__left">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__item">
+              <div class="header__action">ПОДІЇ</div>
+              <div class="header__ticket">
+                <a
+                  href="#"
+                  class="header__link"
+                >
+                  КВИТКИ
+                </a>
+                <button
+                  class="header__button button button--color-green"
+                ></button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
-      <img
-        class="header__bg"
-        src="./images/header-bg.jpg"
-        alt="rigth-bg"
-        width="725"
-        height="655"
-        loading="lazy"
-      />
     </header>
 
     <aside
-      class="menu"
+      class="header__menu menu"
       id="menu"
     >
-      <div class="menu__wrapper">
-        <div class="menu__main">
-          <button class="menu__close"></button>
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a
-                href=""
-                class="menu__link"
+      <div class="container">
+        <div class="menu__wrapper">
+          <div class="menu__main">
+            <button class="menu__close">
+              <svg
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
               >
-                Галерея
-              </a>
-            </li>
-            <li class="menu__item">
-              <a
-                href=""
-                class="menu__link"
-              >
-                Про Нас
-              </a>
-            </li>
-            <li class="menu__item">
-              <a
-                href=""
-                class="menu__link"
-              >
-                Виставки та події
-              </a>
-            </li>
-            <li class="menu__item">
-              <a
-                href=""
-                class="menu__link"
-              >
-                Контакти
-              </a>
-            </li>
-          </ul>
-        </div>
+                <path
+                  d="M6.99999 5.58599L11.95 0.635986L13.364 2.04999L8.41399 6.99999L13.364 11.95L11.95 13.364L6.99999 8.41399L2.04999 13.364L0.635986 11.95L5.58599 6.99999L0.635986 2.04999L2.04999 0.635986L6.99999 5.58599Z"
+                  fill="white"
+                />
+              </svg>
+            </button>
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a
+                  href=""
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href=""
+                  class="menu__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href=""
+                  class="menu__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href=""
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
 
-        <div class="menu__schedule schedule">
-          <h4 class="schedule__title">Графік роботи</h4>
-          <ul class="schedule__list">
-            <li class="schedule__item">12:00 — 20:00 середа</li>
-            <li class="schedule__item">12:00 — 20:00 четвер</li>
-            <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
-            <li class="schedule__item">11:00 — 19:00 субота</li>
-            <li class="schedule__item">11:00 — 19:00 неділя</li>
-          </ul>
-          <div class="schedule__info">
-            <p>
-              <span class="schedule__highliter">Вихідні</span>
-              : понеділок, вівторок
-            </p>
-            <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+          <div class="menu__schedule schedule">
+            <h4 class="schedule__name menu__schedule-name">Графік роботи</h4>
+            <ul class="schedule__list menu__schedule-list">
+              <li class="schedule__item">12:00 — 20:00 середа</li>
+              <li class="schedule__item">12:00 — 20:00 четвер</li>
+              <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
+              <li class="schedule__item">11:00 — 19:00 субота</li>
+              <li class="schedule__item">11:00 — 19:00 неділя</li>
+            </ul>
+            <div class="schedule__info menu__schedule-info">
+              <p>
+                <span class="schedule__highliter">Вихідні</span>
+                : понеділок, вівторок
+              </p>
+              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+            </div>
           </div>
         </div>
       </div>
